feat: add prev/next buttons on widget UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RoundCalendar</string>
+    <string name="prev_day">&lt;</string>
+    <string name="next_day">&gt;</string>
 </resources>
