--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RoundCalendar</string>
     <string name="prev_day">&lt;</string>
     <string name="next_day">&gt;</string>
+    <string name="today">T</string>
 </resources>
