feat: add settings option to choose event color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="prev_day">&lt;</string>
     <string name="next_day">&gt;</string>
     <string name="today">T</string>
+
+    <string name="colors_chooser">Event color:</string>
+    <string name="use_calendar_color">From calendar</string>
+    <string name="use_default_color">Blue (default)</string>
+    <string name="save_button">Save</string>
 </resources>
