feat: parametrize sleep time through settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,15 @@
     <string name="next_day">&gt;</string>
     <string name="today">T</string>
 
+    <string name="calendars_chooser">Displayed calendars:</string>
+
     <string name="colors_chooser">Event color:</string>
     <string name="use_calendar_color">From calendar</string>
     <string name="use_default_color">Blue (default)</string>
 
-    <string name="calendars_chooser">Displayed calendars:</string>
+    <string name="sleep_start">Sleep start time - </string>
+    <string name="sleep_end">Sleep end time - </string>
+    <string name="change">Change</string>
 
     <string name="save_button">Save</string>
 </resources>
