--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="update_period_default">30</string>
 
     <string name="save_button">Save</string>
+    <string name="request_permission">Request Permission</string>
 </resources>
